spacing fix

--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -55,6 +55,7 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	font-family: 'Open Sans', sans-serif;
+	padding: 0 10px;
 }
 
 section.forecastTable div {
@@ -72,6 +73,7 @@ section.forecastTable div h4 {
 
 section.forecastTable p {
 	color: rgba(171,20,26,1);
+	
 }
 
 /*end of table*/
@@ -87,7 +89,7 @@ hr#btwn {
 	display: block;
 	float: right;
 	width: 330px;
-	padding: 3px 3px;
+	padding: 3px 10px 3px 3px;
 }
 
 #artimageAF {
@@ -105,6 +107,7 @@ div.contactinfo {
 	float: right;
 	width: 300px;
 	height: 150px;
+	padding: 0 10px 0 0;
 }
 		
 } /*end medium */
